--- a/package.json
+++ b/package.json
@@ -6,22 +6,22 @@
   "scripts": {
     "dev": "webpack serve --progress --open --mode development --config webpack.development.config.js",
     "maintain": "npm install & npm update && npm audit fix --force",
-    "setup-did": "nodemon -r @babel/register -r dotenv/config ./DIDSetup.js",
+    "setup-did": "nodemon -r @babel/register -r dotenv/config ./setup/setup-did.js",
     "functions": "nodemon -r @babel/register -w lambda lambda/functions.js",
-    "build-quote": "webpack --progress --mode production --config webpack.functions.quote.config.js",
+    "build-did": "webpack --progress --mode production --config lambda/webpack.functions.did.config.js",
     "build-web": "webpack --progress --mode production --config webpack.production.config.js",
     "build": "npm run build-web",
-    "build-all": "npm run build-web && npm run build-quote"
+    "build-all": "npm run build-web && npm run build-did"
   },
   "author": "Martin Novak",
   "license": "ISC",
   "devDependencies": {
-    "@7urtle/lambda": "^1.2.17",
+    "@7urtle/lambda": "^1.2.18",
     "@7urtle/logger": "^1.1.4",
     "@7urtle/server": "^1.0.13",
-    "@babel/core": "^7.14.5",
-    "@babel/node": "^7.14.5",
-    "@babel/preset-env": "^7.14.5",
+    "@babel/core": "^7.15.0",
+    "@babel/node": "^7.14.9",
+    "@babel/preset-env": "^7.15.0",
     "@babel/preset-react": "^7.14.5",
     "axios": "^0.21.1",
     "babel-loader": "^8.2.2",
@@ -31,11 +31,14 @@
     "dotenv": "^10.0.0",
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.2",
+    "ngrok": "^4.0.1",
     "nodemon": "^2.0.12",
+    "qrcode.react": "^1.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "shortid": "^2.2.16",
     "styled-components": "^5.3.0",
-    "webpack": "^5.45.1",
+    "webpack": "^5.47.1",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2"
   }
