--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "copy-webpack-plugin": "^9.0.1",
     "dotenv": "^10.0.0",
+    "file-loader": "^6.2.0",
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.2",
+    "image-webpack-loader": "^7.0.1",
     "ngrok": "^4.0.1",
     "nodemon": "^2.0.12",
     "qrcode.react": "^1.0.1",
@@ -38,7 +40,7 @@
     "react-dom": "^17.0.2",
     "shortid": "^2.2.16",
     "styled-components": "^5.3.0",
-    "webpack": "^5.47.1",
+    "webpack": "^5.49.0",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2"
   }
