--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "webpack serve --progress --open --mode development --config webpack.development.config.js",
     "maintain": "npm install & npm update && npm audit fix --force",
     "setup-did": "nodemon -r @babel/register -r dotenv/config ./setup/setup-did.js",
-    "functions": "nodemon -r @babel/register -r dotenv/config -w lambda lambda/functions.js",
+    "functions": "nodemon -r @babel/register -r dotenv/config -w lambda -w effects lambda/functions.js",
     "build-did": "webpack --progress --mode production --config lambda/webpack.functions.did.config.js",
     "build-web": "webpack --progress --mode production --config webpack.production.config.js",
     "build": "npm run build-web",
@@ -38,6 +38,7 @@
     "qrcode.react": "^1.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "shortid": "^2.2.16",
     "styled-components": "^5.3.0",
     "webpack": "^5.49.0",
