--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-hooks",
+  "name": "did-auth",
   "version": "1.0.0",
   "description": "5 Easy Steps To Abandon Redux For The Remarkable React Hooks",
   "main": "index.js",
@@ -29,6 +29,7 @@
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "copy-webpack-plugin": "^9.0.1",
     "dotenv": "^10.0.0",
+    "faunadb": "^4.3.0",
     "file-loader": "^6.2.0",
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.2",
