--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.2",
     "image-webpack-loader": "^7.0.1",
+    "jsonwebtoken": "^8.5.1",
     "ngrok": "^4.0.1",
     "nodemon": "^2.0.12",
     "qrcode.react": "^1.0.1",
@@ -42,7 +43,7 @@
     "react-router-dom": "^5.2.0",
     "shortid": "^2.2.16",
     "styled-components": "^5.3.0",
-    "webpack": "^5.49.0",
+    "webpack": "^5.50.0",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2"
   }
