--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "webpack serve --progress --open --mode development --config webpack.development.config.js",
     "maintain": "npm install & npm update && npm audit fix --force && npm run build-all",
-    "setup-did": "nodemon -r @babel/register -r dotenv/config ./setup/setup-did.js",
+    "setup-did": "node -r @babel/register -r dotenv/config setup-did.js",
     "functions": "nodemon -r @babel/register -r dotenv/config -w lambda -w effects lambda/functions.js",
     "build-did": "webpack --progress --mode production --config lambda/webpack.functions.did.config.js",
     "build-user": "webpack --progress --mode production --config lambda/webpack.functions.user.config.js",
@@ -17,7 +17,7 @@
   "author": "Martin Novak",
   "license": "ISC",
   "devDependencies": {
-    "@7urtle/lambda": "^1.3.0",
+    "@7urtle/lambda": "^1.3.2",
     "@7urtle/logger": "^1.1.4",
     "@7urtle/server": "^1.0.14",
     "@babel/core": "^7.15.0",
@@ -43,7 +43,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "shortid": "^2.2.16",
-    "styled-components": "^5.3.0",
+    "styled-components": "^5.3.1",
     "webpack": "^5.51.1",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.0.0"
