--- a/package.json
+++ b/package.json
@@ -47,5 +47,8 @@
     "webpack": "^5.51.1",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.0.0"
+  },
+  "dependencies": {
+    "encoding": "^0.1.13"
   }
 }
