fix: netlify function support

--- a/.babelrc
+++ b/.babelrc
@@ -3,5 +3,8 @@
         "@babel/preset-env",
         "@babel/preset-react"
     ],
-    "plugins": [ "babel-plugin-styled-components" ]
+    "plugins": [
+        "babel-plugin-styled-components",
+        "@babel/plugin-transform-runtime"
+    ]
 }
