--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@7urtle/server": "^1.0.14",
     "@babel/core": "^7.15.0",
     "@babel/node": "^7.14.9",
+    "@babel/plugin-transform-runtime": "^7.15.0",
     "@babel/preset-env": "^7.15.0",
     "@babel/preset-react": "^7.14.5",
     "axios": "^0.21.1",
@@ -30,7 +31,7 @@
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "copy-webpack-plugin": "^9.0.1",
     "dotenv": "^10.0.0",
-    "faunadb": "^4.3.0",
+    "faunadb": "^4.4.0",
     "file-loader": "^6.2.0",
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.2",
