--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,18 @@
 {
     "presets": [
-        "@babel/preset-env",
+        [
+            "@babel/preset-env",
+            {
+                "targets": {
+                  "esmodules": true
+                }
+            }
+        ],
         "@babel/preset-react"
     ],
     "plugins": [
         "babel-plugin-styled-components",
-        "@babel/plugin-transform-runtime"
+        "@babel/plugin-transform-runtime",
+        "@babel/plugin-transform-modules-commonjs"
     ]
 }
