--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "maintain": "npm install & npm update && npm audit fix --force && npm run build-all",
     "setup-did": "node -r @babel/register -r dotenv/config setup-did.js",
     "functions": "nodemon -r @babel/register -r dotenv/config -w lambda -w effects lambda/functions.js",
-    "build-did": "webpack --progress --mode production --config lambda/webpack.functions.did.config.js",
+    "build-did": "webpack --progress --mode production --config webpack.functions.did.config.js",
     "build-user": "webpack --progress --mode production --config lambda/webpack.functions.user.config.js",
     "build-web": "webpack --progress --mode production --config webpack.production.config.js",
     "build": "npm run build-web",
@@ -22,6 +22,7 @@
     "@7urtle/server": "^1.0.14",
     "@babel/core": "^7.15.0",
     "@babel/node": "^7.14.9",
+    "@babel/plugin-transform-modules-commonjs": "^7.15.0",
     "@babel/plugin-transform-runtime": "^7.15.0",
     "@babel/preset-env": "^7.15.0",
     "@babel/preset-react": "^7.14.5",
