--- a/.babelrc
+++ b/.babelrc
@@ -1,18 +1,12 @@
 {
     "presets": [
-        [
-            "@babel/preset-env",
-            {
-                "targets": {
-                  "esmodules": true
-                }
-            }
-        ],
+        "@babel/preset-env",
         "@babel/preset-react"
     ],
     "plugins": [
         "babel-plugin-styled-components",
         "@babel/plugin-transform-runtime",
-        "@babel/plugin-transform-modules-commonjs"
+        "@babel/plugin-proposal-throw-expressions",
+        "@babel/plugin-syntax-dynamic-import"
     ]
 }
