--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
   "author": "Martin Novak",
   "license": "ISC",
   "devDependencies": {
-    "@7urtle/lambda": "^1.2.9",
+    "@7urtle/lambda": "C:/Users/ragnarecek/code/lambda/7urtle-lambda-1.3.10.tgz",
     "@7urtle/logger": "^1.1.4",
     "@7urtle/server": "^1.0.14",
     "@babel/core": "^7.15.0",
     "@babel/node": "^7.14.9",
-    "@babel/plugin-transform-modules-commonjs": "^7.15.0",
+    "@babel/plugin-proposal-throw-expressions": "^7.14.5",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-transform-runtime": "^7.15.0",
     "@babel/preset-env": "^7.15.0",
     "@babel/preset-react": "^7.14.5",
