--- a/.env_template
+++ b/.env_template
@@ -1,7 +1,8 @@
-CLIENT_ID=
-CLIENT_SECRET=
-TENANT=
-TEMPLATE_ID=
-VERIFIER_DID=
-JWT_PRIVATE_KEY=
-FAUNA_SECRET=
+CLIENT_ID=obtain this from MATTR by registering on mattr.global
+CLIENT_SECRET=obtain this from MATTR by registering on mattr.global
+TENANT=obtain this from MATTR by registering on mattr.global
+TEMPLATE_ID=get this by running "npm run setup-did"
+VERIFIER_DID=get this by running "npm run setup-did"
+JWT_PRIVATE_KEY=Just make up your secret key here, random password-like string
+FAUNA_SECRET=Database secret obtained from Fauna database
+PRESENTATION_CALLBACK_URL=This one is used only in production, locally your functions automatically create Ngrok tunnel. The callback url is full url like https://youraddress.netlify.app/.netlify/functions/did/callback
