--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "axios": "^0.21.1",
     "babel-loader": "^8.2.2",
     "babel-plugin-styled-components": "^1.13.2",
-    "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^9.0.1",
     "dotenv": "^10.0.0",
     "faunadb": "^4.4.0",
@@ -44,6 +44,7 @@
     "qrcode.react": "^1.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^5.2.1",
     "shortid": "^2.2.16",
     "styled-components": "^5.3.1",
