--- a/.babelrc
+++ b/.babelrc
@@ -3,5 +3,10 @@
         "@babel/preset-env",
         "@babel/preset-react"
     ],
-    "plugins": [ "babel-plugin-styled-components" ]
+    "plugins": [
+        "babel-plugin-styled-components",
+        "@babel/plugin-transform-runtime",
+        "@babel/plugin-proposal-throw-expressions",
+        "@babel/plugin-syntax-dynamic-import"
+    ]
 }
