--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "maintain": "npm install & npm update && npm audit fix --force && npm run build-all",
     "setup-did": "node -r @babel/register -r dotenv/config setup-did.js",
     "functions": "nodemon -r @babel/register -r dotenv/config -w lambda -w effects lambda/functions.js",
-    "build-did": "webpack --progress --mode production --config lambda/webpack.functions.did.config.js",
+    "build-did": "webpack --progress --mode production --config webpack.functions.did.config.js",
     "build-user": "webpack --progress --mode production --config lambda/webpack.functions.user.config.js",
     "build-web": "webpack --progress --mode production --config webpack.production.config.js",
     "build": "npm run build-web",
@@ -17,20 +17,23 @@
   "author": "Martin Novak",
   "license": "ISC",
   "devDependencies": {
-    "@7urtle/lambda": "^1.3.2",
+    "@7urtle/lambda": "^1.3.7",
     "@7urtle/logger": "^1.1.4",
-    "@7urtle/server": "^1.0.14",
+    "@7urtle/server": "^1.0.15",
     "@babel/core": "^7.15.0",
     "@babel/node": "^7.14.9",
+    "@babel/plugin-proposal-throw-expressions": "^7.14.5",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.15.0",
     "@babel/preset-env": "^7.15.0",
     "@babel/preset-react": "^7.14.5",
     "axios": "^0.21.1",
     "babel-loader": "^8.2.2",
     "babel-plugin-styled-components": "^1.13.2",
-    "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^9.0.1",
     "dotenv": "^10.0.0",
-    "faunadb": "^4.3.0",
+    "faunadb": "^4.4.0",
     "file-loader": "^6.2.0",
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.2",
@@ -41,12 +44,13 @@
     "qrcode.react": "^1.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.2.0",
+    "react-helmet": "^6.1.0",
+    "react-router-dom": "^5.2.1",
     "shortid": "^2.2.16",
     "styled-components": "^5.3.1",
     "webpack": "^5.51.1",
     "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.0.0"
+    "webpack-dev-server": "^4.1.0"
   },
   "dependencies": {
     "encoding": "^0.1.13"
