feat: improved description

--- a/.env_template
+++ b/.env_template
@@ -1,6 +1,6 @@
 CLIENT_ID=obtain this from MATTR by registering on mattr.global
 CLIENT_SECRET=obtain this from MATTR by registering on mattr.global
-TENANT=obtain this from MATTR by registering on mattr.global
+TENANT=obtain this from MATTR by registering on mattr.global, looks like your-tenant.vii.mattr.global
 TEMPLATE_ID=get this by running "npm run setup-did"
 VERIFIER_DID=get this by running "npm run setup-did"
 JWT_PRIVATE_KEY=Just make up your secret key here, random password-like string
