refactor: migrate to didauth library

--- a/.env_template
+++ b/.env_template
@@ -5,4 +5,4 @@ TEMPLATE_ID=get this by running "npm run setup-did"
 VERIFIER_DID=get this by running "npm run setup-did"
 JWT_PRIVATE_KEY=Just make up your secret key here, random password-like string
 FAUNA_SECRET=Database secret obtained from Fauna database
-PRESENTATION_CALLBACK_URL=This one is used only in production, locally your functions automatically create Ngrok tunnel. The callback url is full url like https://youraddress.netlify.app/.netlify/functions/did/callback
+CALLBACK_URL=This one is used only in production, locally your functions automatically create Ngrok tunnel. The callback url is full url like https://youraddress.netlify.app/.netlify/functions/did/callback
