--- a/package.json
+++ b/package.json
@@ -17,40 +17,41 @@
   "author": "Martin Novak",
   "license": "ISC",
   "devDependencies": {
-    "@7urtle/lambda": "^1.3.7",
+    "@7urtle/lambda": "^1.3.8",
     "@7urtle/logger": "^1.1.4",
     "@7urtle/server": "^1.0.15",
-    "@babel/core": "^7.15.5",
-    "@babel/node": "^7.15.4",
-    "@babel/plugin-proposal-throw-expressions": "^7.14.5",
+    "@babel/core": "^7.16.0",
+    "@babel/node": "^7.16.0",
+    "@babel/plugin-proposal-throw-expressions": "^7.16.0",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/plugin-transform-runtime": "^7.15.0",
-    "@babel/preset-env": "^7.15.4",
-    "@babel/preset-react": "^7.14.5",
+    "@babel/plugin-transform-runtime": "^7.16.0",
+    "@babel/preset-env": "^7.16.0",
+    "@babel/preset-react": "^7.16.0",
     "axios": "^0.21.4",
-    "babel-loader": "^8.2.2",
-    "babel-plugin-styled-components": "^1.13.2",
+    "babel-loader": "^8.2.3",
+    "babel-plugin-styled-components": "^1.13.3",
     "clean-webpack-plugin": "^4.0.0",
-    "copy-webpack-plugin": "^9.0.1",
+    "copy-webpack-plugin": "^9.1.0",
+    "didauth": "^1.1.0",
     "dotenv": "^10.0.0",
     "faunadb": "^4.4.1",
     "file-loader": "^6.2.0",
     "html-loader": "^2.1.2",
-    "html-webpack-plugin": "^5.3.2",
-    "image-webpack-loader": "^7.0.1",
+    "html-webpack-plugin": "^5.5.0",
+    "image-webpack-loader": "^8.0.1",
     "jsonwebtoken": "^8.5.1",
     "ngrok": "^4.2.2",
-    "nodemon": "^2.0.12",
+    "nodemon": "^2.0.15",
     "qrcode.react": "^1.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^5.3.0",
     "shortid": "^2.2.16",
-    "styled-components": "^5.3.1",
-    "webpack": "^5.52.0",
-    "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.1.1"
+    "styled-components": "^5.3.3",
+    "webpack": "^5.64.0",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.5.0"
   },
   "dependencies": {
     "encoding": "^0.1.13"
