--- a/.env_template
+++ b/.env_template
@@ -1,8 +1,8 @@
-CLIENT_ID=obtain this from MATTR by registering on mattr.global
-CLIENT_SECRET=obtain this from MATTR by registering on mattr.global
-TENANT=obtain this from MATTR by registering on mattr.global, looks like your-tenant.vii.mattr.global
-TEMPLATE_ID=get this by running "npm run setup-did"
+MATTR_CLIENT_ID=obtain this from MATTR by registering on mattr.global
+MATTR_CLIENT_SECRET=obtain this from MATTR by registering on mattr.global
+MATTR_TENANT=obtain this from MATTR by registering on mattr.global, looks like your-tenant.vii.mattr.global
+PRESENTATION_TEMPLATE_ID=get this by running "npm run setup-did"
 VERIFIER_DID=get this by running "npm run setup-did"
 JWT_PRIVATE_KEY=Just make up your secret key here, random password-like string
 FAUNA_SECRET=Database secret obtained from Fauna database
-CALLBACK_URL=This one is used only in production, locally your functions automatically create Ngrok tunnel. The callback url is full url like https://youraddress.netlify.app/.netlify/functions/did/callback
+DIDAUTH_CALLBACK_URL=This one is used only in production, locally your functions automatically create Ngrok tunnel. The callback url is full url like https://youraddress.netlify.app/.netlify/functions/did/callback
