feat: added cryptography security

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "maintain": "npm install & npm update && npm audit fix --force && npm run build-all",
     "setup-did": "node -r @babel/register -r dotenv/config setup-did.js",
     "setup-fauna": "node -r @babel/register -r dotenv/config setup-fauna.js",
+    "setup-secrets": "node -r @babel/register setup-secrets.js",
     "functions": "nodemon -r @babel/register -r dotenv/config -w lambda -w effects lambda/functions.js",
     "build-did": "webpack --progress --mode production --config webpack.functions.did.config.js",
     "build-user": "webpack --progress --mode production --config lambda/webpack.functions.user.config.js",
