--- a/.env_template
+++ b/.env_template
@@ -3,6 +3,8 @@ MATTR_CLIENT_SECRET=obtain this from MATTR by registering on mattr.global
 MATTR_TENANT=obtain this from MATTR by registering on mattr.global, looks like your-tenant.vii.mattr.global
 PRESENTATION_TEMPLATE_ID=get this by running "npm run setup-did"
 VERIFIER_DID=get this by running "npm run setup-did"
-JWT_SECRET=Just make up your secret key here, random password-like string
+JWT_SECRET=get this by running "npm run setup-secrets"
+CRYPTO_IV=get this by running "npm run setup-secrets"
+CRYPTO_KEY=get this by running "npm run setup-secrets"
 FAUNA_SECRET=Database secret obtained from Fauna database
 DIDAUTH_CALLBACK_URL=This one is used only in production, locally your functions automatically create Ngrok tunnel. The callback url is full url like https://youraddress.netlify.app/.netlify/functions/did/callback
