--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "html-webpack-plugin": "^5.5.0",
     "image-webpack-loader": "^8.1.0",
     "jsonwebtoken": "^8.5.1",
+    "nanoid": "^3.2.0",
     "ngrok": "^4.2.2",
     "nodemon": "^2.0.15",
     "qrcode.react": "^1.0.1",
@@ -52,7 +53,6 @@
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^5.3.0",
-    "shortid": "^2.2.8",
     "styled-components": "^5.3.3",
     "webpack": "^5.66.0",
     "webpack-cli": "^4.9.1",
